one script file's file extension suddenly got capitalized so i had to change the script link in all the html files lol...

--- a/views/dog_care.html
+++ b/views/dog_care.html
@@ -4,7 +4,7 @@
     <title>Dog Care - FriendShop</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="/A1_Q8_stylesheet.css">
-    <script src="/A2_Q8.js" defer></script>
+    <script src="/A2_Q8.JS" defer></script>
 </head>
 <body>
     <div class="container">
